# Scriberr

./: Dockerfile.rocm  README.md  build-rocm.sh  docker-compose.rocm.yml  docker-entrypoint.rocm.sh
cmd/server/: main.go
ds/: design-system.html
internal/transcription/: unified_service.go
internal/transcription/adapters/: base_adapter.go  embed_nemo_rocm.go  parakeet_rocm_adapter.go  sortformer_rocm_adapter.go  whisper_hf_adapter.go
internal/transcription/adapters/py/nemo_rocm/: parakeet_rocm_transcribe.py  sortformer_rocm_diarize.py
internal/transcription/adapters/py/nvidia/: parakeet_transcribe.py  sortformer_diarize.py
internal/transcription/adapters/py/whisper_hf/: pyproject.toml  whisper_transcribe.py
web/frontend/src/components/transcription/: TranscriptionConfigDialog.tsx
web/frontend/src/features/home/components/: HomePage.tsx
web/frontend/src/features/transcription/components/: AudioDetailView.tsx  TranscriptNotesSidebar.tsx
web/frontend/src/styles/: design-system.css
